cabal-version:       2.4
name:                bodhi
version:             0.0.1
synopsis:            Fedora Bodhi REST client library
description:         Fedora Bodhi REST client library
homepage:            https://github.com/juhp/bodhi-hs
bug-reports:         https://github.com/juhp/bodhi-hs/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/bodhi-hs.git

common common-options
  build-depends:       aeson
                     , aeson-pretty
                     , base >= 4 && < 5
                     , bytestring
                     , filepath
                     , http-conduit
                     , text
                     , time

  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  if flag(microlens)
      build-depends:   microlens, microlens-aeson
      cpp-options:   -DMICROLENS
  else
      build-depends:   lens, lens-aeson

flag microlens
  description:       Use smaller microlens instead of lens
  default:           False

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Web.Fedora.Bodhi

executable bodhi-cli
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       bodhi
