cabal-version:       1.22
name:                bodhi
version:             0.0.1
synopsis:            Fedora Bodhi REST client library
description:
            A REST client library for the Fedora Bodhi updates server.
            The binding is currently fairly low-level returning JSON Objects.
            So far it covers nearly all of the GET part of the API.
homepage:            https://github.com/juhp/bodhi-hs
bug-reports:         https://github.com/juhp/bodhi-hs/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
                     examples/Main.hs
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/bodhi-hs.git

flag microlens
  description:       Use smaller microlens instead of lens
  default:           False

flag debug
  description:       For pretty json output
  default:           False

library
  build-depends:       aeson
                     , base >= 4 && < 5
                     , http-query
                     , text
                     , time
  if flag(debug)
      build-depends:   aeson-pretty
  if flag(microlens)
      build-depends:   microlens, microlens-aeson
  else
      build-depends:   lens, lens-aeson

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Fedora.Bodhi
